Fix operation alignment

--- a/stock_kardex/static/src/scss/kardex_view.scss
+++ b/stock_kardex/static/src/scss/kardex_view.scss
@@ -50,6 +50,7 @@
         }
 
         .o_kardex_operation {
+            text-align: center;
             font-size: 2.5em;
             padding: 0.5em;
             color: #ffffff;
